--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,6 @@
 
 
 body {
-  background: var(--color-background);
-  padding: 150px 0 50px;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -18,14 +16,21 @@ code {
     monospace;
 }
 
-.content {
-  padding: 0 10px;
-  background-color: var(--color-white);
-  color: var(--color-dark);
-}
-
 .container {
   max-width: 1440px;
   margin: 0 auto;
+  padding: 0 10px;
   width: 100%;
+}
+
+/*//normalize*/
+ul {
+  list-style: none;
+}
+
+button {
+  cursor: pointer;
+  border: none;
+  background-color: transparent;
+  color: inherit;
 }
