--- a/src/components/header/styles.module.scss
+++ b/src/components/header/styles.module.scss
@@ -1,6 +1,5 @@
 .header {
-  height: 20px;
-  padding: 20px 0 ;
+  padding-top: 20px;
   color: var(--color-white);
   position: fixed;
   left: 0;
@@ -8,6 +7,7 @@
   width: 100%;
   background-color: rgba(0,0,0,.6);
   z-index: 999;
+  margin-bottom: 100px;
 }
 
 .container {
