--- a/src/components/header/styles.module.scss
+++ b/src/components/header/styles.module.scss
@@ -1,13 +1,23 @@
 .header {
-  padding-top: 20px;
+  padding: 20px 0;
   color: var(--color-white);
   position: fixed;
   left: 0;
   top: 0;
   width: 100%;
-  background-color: rgba(0,0,0,.6);
+  background-color: rgba(0, 0, 0, .6);
   z-index: 999;
   margin-bottom: 100px;
+
+  &__logo {
+    width: 50px;
+    height: 50px;
+  }
+
+  &__wrapper {
+    display: flex;
+    align-items: center;
+  }
 }
 
 .container {
@@ -36,4 +46,11 @@
 }
 
 .button {
+}
+
+.dropdown {
+
+  &__list {
+    display: flex;
+  }
 }
