added movie search and pagination component

--- a/src/components/header/dropdownMenu/styles.module.scss
+++ b/src/components/header/dropdownMenu/styles.module.scss
@@ -14,11 +14,11 @@
   position: absolute;
   z-index: 1;
   min-width: 160px;
-  margin-top: 0.5rem;
-  padding: 0.5rem 0;
+  padding: 10px 0;
   border: 1px solid #ccc;
   border-radius: 0.25rem;
   background-color: #fff;
+  color: black;
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15), 0 0.1rem 0.3rem rgba(0, 0, 0, 0.08);
 
   &.show {
@@ -31,10 +31,9 @@
     animation-fill-mode: both;
   }
 
-  .dropdown-item {
+  .dropdownItem {
     display: block;
     width: 100%;
-    padding: 0.25rem 1.5rem;
     clear: both;
     font-weight: 400;
     color: #212529;
@@ -44,8 +43,8 @@
     border: 0;
   }
 
-  .dropdown-item:hover,
-  .dropdown-item:focus {
+  .dropdownItem:hover,
+  .dropdownItem:focus {
     color: #fff;
     background-color: #007bff;
   }
