--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@
 
 body {
   margin: 0;
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -26,6 +27,7 @@ code {
 
 /*//normalize*/
 ul {
+  margin: 0;
   padding: 0;
   list-style: none;
 }
