--- a/src/views/components/Header/styles.module.scss
+++ b/src/views/components/Header/styles.module.scss
@@ -5,7 +5,7 @@
   left: 0;
   top: 0;
   width: 100%;
-  background-color: rgba(0, 0, 0, .6);
+  background-color: var(--color-yellow);
   z-index: 999;
   margin-bottom: 100px;
 
