--- a/src/views/components/Selector/styles.module.scss
+++ b/src/views/components/Selector/styles.module.scss
@@ -6,23 +6,23 @@
 }
 
 .day {
-  background-color: #eee;
-  color: #333;
+  background-color: var(--color-gray);
+  color: var(--color-dark);
   padding: 0.5rem 1rem;
   border-radius: 5px 0 0 5px;
   cursor: pointer;
 }
 
 .week {
-  background-color: #eee;
-  color: #333;
+  background-color: var(--color-gray);
+  color:  var(--color-dark);
   padding: 0.5rem 1rem;
   border-radius: 0 5px 5px 0;
   cursor: pointer;
 }
 
 .active {
-  background-color: #007bff;
+  background-color: var(--color-dark-light);
   color: #fff;
 }
 
