--- a/src/views/components/Header/dropdownMenu/styles.module.scss
+++ b/src/views/components/Header/dropdownMenu/styles.module.scss
@@ -1,12 +1,8 @@
 .dropdownButton {
-  background-color: #28a745;
+  padding: 8px 15px;
+  background-color: var(--color-dark-light);
+  border-radius: 10px;
   margin: 0 0 0 20px;
-  border-color: #28a745;
-
-  &:hover {
-    background-color: #620606;
-    border-color: #1e7e34;
-  }
 }
 
 .dropdownMenu {
