--- a/src/views/components/Header/styles.module.scss
+++ b/src/views/components/Header/styles.module.scss
@@ -16,41 +16,20 @@
 
   &__wrapper {
     display: flex;
+    justify-content: space-between;
     align-items: center;
   }
-}
 
-.container {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.block {
-  padding: 10px 0;
-  background-color: #444;
-  width: 100%;
-  height: 0;
-  opacity: 0;
-  transition: all 0.5s ease-in-out;
-  transform: translateY(-20px);
-  overflow: hidden;
-
-  &.visible {
-    opacity: 1;
-    transform: translateY(0);
-    height: 80px;
-    margin-top: 21px;
+  &__wrapper_navigate {
+    display: flex;
+    align-items: center;
   }
-}
-
-.button {
 }
 
 .dropdown {
 
   &__list {
+    margin-left: 15px;
     display: flex;
   }
 }
