added AvatarMenu components to display information about the user

--- a/src/views/components/Header/styles.module.scss
+++ b/src/views/components/Header/styles.module.scss
@@ -24,6 +24,11 @@
     display: flex;
     align-items: center;
   }
+
+  &__wrapper_right {
+    display: flex;
+    align-items: center;
+  }
 }
 
 .dropdown {
