--- a/src/views/components/LanguageSelect/styles.module.scss
+++ b/src/views/components/LanguageSelect/styles.module.scss
@@ -1,15 +1,15 @@
 .language {
-  margin-left: 100px;
+  margin-right: 25px;
   position: relative;
   display: inline-block;
 
   &__button {
     display: flex;
     align-items: center;
-    padding: 0.5rem;
+    padding: 8px 15px;
     border: 1px solid #212121;
-    border-radius: 0.25rem;
-    background-color: #464242;
+    border-radius: 10px;
+    background-color: var(--color-dark-light);
     cursor: pointer;
 
     &::after {
@@ -22,35 +22,25 @@
       border-right: 0.2rem solid #888;
       transform: rotate(45deg);
     }
-
-    &:hover {
-      background-color: #eee;
-    }
   }
 
   &__options {
     position: absolute;
+    padding: 10px 15px;
     top: 100%;
     left: 0;
     right: 0;
     display: none;
-    padding: 0.5rem;
     border: 1px solid #ddd;
     border-top: none;
     border-radius: 0 0 0.25rem 0.25rem;
     background-color: #2f2b2b;
     width: 300px;
     height: 300px;
-    overflow-y: auto;
     z-index: 1;
 
     .language-select__option {
       display: block;
-      padding: 0.5rem;
-
-      &:hover {
-        background-color: #eee;
-      }
 
       &.selected {
         font-weight: bold;
@@ -60,7 +50,9 @@
 
   &__option_search {
     display: block;
-    margin: 0.5rem 0;
+    width: 100%;
+    margin-top: 10px;
+    //margin: 0.5rem 0;
 
     input {
       position: fixed;
@@ -70,11 +62,18 @@
     }
   }
 
+  &__option_list {
+    width: 300px;
+    height: 300px;
+    overflow-y: auto;
+  }
+
   &__option {
     display: block;
     padding: 0.5rem;
 
     &:hover {
+      color: var(--color-dark-daker);
       background-color: #eee;
     }
 
