--- a/src/views/components/Card/styles.module.scss
+++ b/src/views/components/Card/styles.module.scss
@@ -10,6 +10,7 @@
   overflow: hidden;
   margin-top: 30px;
   width: calc((100vw - 80px - 260px - 30px * 5) / 5);
+  cursor: pointer;
 
   &__img {
     width: 100%;
