--- a/src/views/pages/Search/components/Movies/styles.module.scss
+++ b/src/views/pages/Search/components/Movies/styles.module.scss
@@ -1,6 +1,7 @@
 .movies {
 
   &__item {
+    cursor: pointer;
     padding: 10px;
     display: flex;
     border: 1px solid rgba(227, 227, 227, 1);
