--- a/src/index.css
+++ b/src/index.css
@@ -43,6 +43,10 @@ button {
     /*color: inherit;*/
 }
 
+h1, h2, h3, h4, h5, p {
+    margin: 0;
+    padding: 0;
+}
 h1 {
     font-size: var(--fs-h1);
 }
