--- a/src/views/pages/Movie/movie.module.scss
+++ b/src/views/pages/Movie/movie.module.scss
@@ -9,11 +9,29 @@
   }
 
   &__content {
-    padding: 15px 0;
+    display: flex;
+    padding: 30px 10px;
   }
 
   &__image {
     object-fit: cover;
-    height: 300px;
+    height: 450px;
+    width: 300px;
+    border-radius: 8px;
   }
+  &__info {
+    padding-left: 40px;
+    display: flex;
+    //align-items: center;
+    flex-wrap: wrap;
+  }
+}
+.title__actors {
+  margin-bottom: 20px;
+}
+.list {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
