--- a/src/views/components/Card/styles.module.scss
+++ b/src/views/components/Card/styles.module.scss
@@ -11,6 +11,8 @@
   margin-top: 30px;
   width: calc((100vw - 80px - 260px - 20px * 5) / 5);
   cursor: pointer;
+  min-width: 150px;
+  margin-left: 20px;
 
   &__img {
     width: 100%;
